2024 planner with collections, weekly reviews and prompts

--- a/cfg/sn_a5x.mos.default.dailycal.yaml
+++ b/cfg/sn_a5x.mos.default.dailycal.yaml
@@ -1,7 +1,7 @@
 calafterschedule: true
-addlasthalfhour: true
+addlasthalfhour: false
 
 layout:
   numbers:
     dailybottomhour: 9
-    dailytophour: 20
+    dailytophour: 22
