--- a/cfg/base.yaml
+++ b/cfg/base.yaml
@@ -14,7 +14,7 @@ layout:
     reversemargins: true
 
     margin:
-      top: 1.2cm
+      top: 0.7cm
       bottom: 0.7cm
       left: 0.5cm
       right: 0.5cm
@@ -23,19 +23,25 @@ layout:
     arraystretch: 1.5
     quarterlylines: 36
     weeklylines: 11
-    dailytodos: 8
-    dailynotes: 25
+    weeklyreflectgoals: 8
+    weeklyreflectgood: 8
+    weeklyreflectbad: 8
+    dailytodos: 14
+    dailynotes: 15
     dailypersonal: 6
     dailybottomhour: 7
     dailytophour: 23
-    dailydiarygoals: 10
-    dailydiarygrateful: 4
-    dailydiarybest: 4
+    dailydiarygoals: 9
+    dailydiarygrateful: 9
+    dailydiarybest: 9
+    dailydiaryimprove: 9
     dailydiarylog: 24
     todolinesintodopage: 10
-    notesindexpages: 3
-    notesonpage: 35
-    dotheightfull: 36
+    notesindexpages: 1
+    notesonpage: 13
+    notespagespernote: 10
+    dotheightfull: 37
+    dotnotesheightfull: 36
     dotwidthfull: 30
     dotwidthtwothirds: 20
 
@@ -48,7 +54,8 @@ layout:
     tricolsep: 5pt
     fivecolsep: 5pt
     monthlycellheight: 55pt
-    notesindexcellheight: 1.37cm
+    notesindexcellheight: 1.7cm
+    notesindexcellscale: 3.5
     headerresizebox: 6mm
     headersidequarterswidth: 4cm
     headersidemonthswidth: 14.5cm
